<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="br.com.therealbatman.listadetarefas.activity.EstacionamentoActivity">

    <item
        android:id="@+id/action_entrada"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/action_entrada" />
    <item
        android:id="@+id/action_saida"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/action_saida" />

    <item
        android:id="@+id/action_repetir"
        android:orderInCategory="100"
        android:icon="@drawable/ic_repetir_24dp"
        app:showAsAction="always"
        android:title="@string/action_repetir" />


</menu>